tests/aster/x/mochi/rosetta/create-a-file-on-magnetic-tape.error
error[A007]: map entry type mismatch
  --> /workspace/mochi/tests/rosetta/x/Mochi/create-a-file-on-magnetic-tape.mochi:34:5

 34 |     "Mode": 0o660,
    |     ^

help:
  Ensure map keys and values share types
